--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluent_ui: ^4.7.3
   flutter_acrylic: ^1.1.3
-  system_tray: ^2.0.3
+  tray_manager: ^0.2.1
   provider: ^6.0.0
   adaptive_theme: ^3.4.0
   system_theme: ^2.3.1
@@ -45,6 +45,8 @@ dependencies:
   mutex: ^3.0.1
   shared_preferences: ^2.2.1
   desktop_window: ^0.4.0
+  hotkey_manager: ^0.1.8
+  screen_retriever: ^0.1.9
 
 dev_dependencies:
   flutter_test:
